# IntroToHDF5

./: .gitignore  .pre-commit  CMakeLists.txt  Makefile  README.md  Snakefile  conda_env.yml  conda_env_simple.yml  main.py.ipynb  main.r.ipynb  notes.md  test2_rhdf5.R  test2_rhdf5.h5  test_highfive.cpp  tests.py.ipynb  tests.r.ipynb  write_data.cpp
Scripts/: initial_data.py  test_data.R  test_data.py  use_h5py.py  use_rhdf5.R
src/: highfive_test.cpp
